--- a/index.html
+++ b/index.html
@@ -55,145 +55,154 @@
   </nav>
 
   <div class="container-fluid p-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-      <div class="my-auto">
-        <h1 class="mb-0">Jimmy
-          <span class="text-primary">Orawetz</span>
-        </h1>
-        <div class="subheading mb-5">Am Pfiff 39 · 01187 Dresden · 015207855656 ·
-          <a href="mailto:s73980@htw.dresden.de">s73980@htw-dresden.de</a>
-        </div>
-        <p class="mb-5">"Computer werden kleiner und kleiner, bald verschwinden sie völlig."<br> -Ephraim Kishons</p>
-        <ul class="list-inline list-social-icons mb-0">
-          <li class="list-inline-item">
-            <a href="https://www.facebook.com/jimmy.orawetz">
+    <div id="allinput">
+      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+        <div class="my-auto">
+          <h1 class="mb-0">{{stakeholder[0].contact.contactPerson}}
+            <span class="text-primary">Orawetz</span>
+          </h1>
+          <div class="subheading mb-5">{{stakeholder[0].contact.postAddress}} · 01187 Dresden · {{stakeholder[0].contact.phone}}·
+            <a href="mailto:s73980@htw.dresden.de">{{stakeholder[0].contact.email}}</a>
+          </div>
+          <p class="mb-5">"Computer werden kleiner und kleiner, bald verschwinden sie völlig."<br> -Ephraim Kishons</p>
+          <ul class="list-inline list-social-icons mb-0">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/jimmy.orawetz">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-      <div class="my-auto">
-        <h2 class="mb-5">Profile</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Plattform</h3>
-            <div class="subheading mb-3">Link zu Plattformprofil</div>
-            <p>Plattformbeschreibung oder nähere Infos</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">ggf Datum der Aktualisierung</span>
-          </div>
+            </li>
+          </ul>
         </div>
+      </section>
 
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Plattform</h3>
-            <div class="subheading mb-3">Link zu Plattformprofil</div>
-            <p>Plattformbeschreibung oder nähere Infos</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">ggf Datum der Aktualisierung</span>
-          </div>
-        </div>
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+        <div class="my-auto">
+          <h2 class="mb-5">Profile</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Plattform</h3>
-            <div class="subheading mb-3">Link zu Plattformprofil</div>
-            <p>Plattformbeschreibung oder nähere Infos</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">ggf Datum der Aktualisierung</span>
-          </div>
-        </div>
-        
-
-
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-      <div class="my-auto">
-        <h2 class="mb-5">Hinzufügen...</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5" id="platinput">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Plattform</h3>
-            <div class="form-group row">
-              <div class="col-15">
-                <input class="form-control" type="text" placeholder="Plattform eingeben..." id="platinput" v-model="plattform">
-                <p> {{plattform}} </p>
-              </div>
-            </div>
-
-            <div class="form-group row">
-              <div class="col-20">
-                <input class="form-control" type="text" placeholder="Profillink..." id="urlinput" v-model="url">
-                <p> {{url}} </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="allinput">
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Name</h3>
+              <div class="subheading mb-3">{{stakeholder[0].contact.contactPerson}}</div> 
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ggf Datum der Aktualisierung</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Adresse</h3>
+              <div class="subheading mb-3">{{stakeholder[0].contact.postAddress}}</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ggf Datum der Aktualisierung</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Telefonnummer</h3>
+              <div class="subheading mb-3">{{stakeholder[0].contact.phone}}</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ggf Datum der Aktualisierung</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Fax</h3>
+              <div class="subheading mb-3">{{stakeholder[0].contact.telefax}}</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ggf Datum der Aktualisierung</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Email</h3>
+              <div class="subheading mb-3">{{stakeholder[0].contact.email}}</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ggf Datum der Aktualisierung</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Plattform</h3>
+                <div class="subheading mb-3">{{stakeholder[0].contact.website}}</div>
+                <p>Plattformbeschreibung oder nähere Infos</p>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary">ggf Datum der Aktualisierung</span>
+              </div>
+            </div>
+
+
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+        <div class="my-auto">
+          <h2 class="mb-5">Hinzufügen...</h2>
           <span div v-for="(item,property) in stakeholder[0].contact">
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">{{property}}</h3>
               <div class="form-group row">
                 <div class="col-15">
-                  <input class="form-control" type="tel" placeholder="property" v-bind="stakeholder[0].contact.property">
+                  <input class="form-control" type="text" :placeholder="item" v-model="stakeholder[0].contact[property]">
                 </div>
               </div>
             </div>
-           </span>
           </div>
+           </span>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">{{stakeholder[0].contact.contactPerson}}</div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">{{stakeholder[0].contact.postAddress}}</div>
+
         </div>
-    </section>
+      </section>
+      </div>
 
+      <!-- Bootstrap core JavaScript -->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <!-- Plugin JavaScript -->
+      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
-    <script src="js/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.11.10/vue.min.js"></script>
+      <!-- Custom scripts for this template -->
+      <script src="js/resume.min.js"></script>
+      <script src="js/vue.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.11.10/vue.min.js"></script>
 
 </body>
 
