--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#kontakte">Kontakte</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">Allgemein</a>
         </li>
         <li class="nav-item">
@@ -54,12 +57,16 @@
     </div>
   </nav>
 
+  <section class="resume-section p-3 p-lg-5 d-flex d-column" id="kontakte">
+    <h2 class="mb-5">Kontakte</h2>
+  </section>
+
   <div class="container-fluid p-0">
     <div id="allinput">
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">{{stakeholder[0].contact.contactPerson}}
-            <span class="text-primary">Orawetz</span>
+          <h1 class="mb-0">{{stakeholder[0].contact.contactPerson|firstname}}
+            <span class="text-primary">{{stakeholder[0].contact.contactPerson|lastname}}</span>
           </h1>
           <div class="subheading mb-5">{{stakeholder[0].contact.postAddress}} · 01187 Dresden · {{stakeholder[0].contact.phone}}·
             <a href="mailto:s73980@htw.dresden.de">{{stakeholder[0].contact.email}}</a>
@@ -109,7 +116,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Name</h3>
-              <div class="subheading mb-3">{{stakeholder[0].contact.contactPerson}}</div> 
+              <div class="subheading mb-3">{{stakeholder[0].contact.contactPerson}}</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">ggf Datum der Aktualisierung</span>
@@ -157,15 +164,15 @@
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-              <div class="resume-content mr-auto">
-                <h3 class="mb-0">Plattform</h3>
-                <div class="subheading mb-3">{{stakeholder[0].contact.website}}</div>
-                <p>Plattformbeschreibung oder nähere Infos</p>
-              </div>
-              <div class="resume-date text-md-right">
-                <span class="text-primary">ggf Datum der Aktualisierung</span>
-              </div>
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Plattform</h3>
+              <div class="subheading mb-3">{{stakeholder[0].contact.website}}</div>
+              <p>Plattformbeschreibung oder nähere Infos</p>
             </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">ggf Datum der Aktualisierung</span>
+            </div>
+          </div>
 
 
       </section>
@@ -179,15 +186,12 @@
               <h3 class="mb-0">{{property}}</h3>
               <div class="form-group row">
                 <div class="col-15">
-                  <input class="form-control" type="text" :placeholder="item" v-model="stakeholder[0].contact[property]">
+                  <input class="form-control" type="text" :placeholder="property" v-model="stakeholder[0].contact[property]">
                 </div>
               </div>
             </div>
           </div>
            </span>
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">{{stakeholder[0].contact.contactPerson}}</div>
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">{{stakeholder[0].contact.postAddress}}</div>
-
         </div>
       </section>
       </div>
