--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/oras.jpg" alt="">
-        </span>
-      </a>
+      <span class="d-block d-lg-none">Nav</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/oras.jpg" alt="">
+      </span>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -51,27 +51,47 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">hinzufügen...</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Bearbeiten...</a>
         </li>
       </ul>
     </div>
   </nav>
 
-  <section class="resume-section p-3 p-lg-5 d-flex d-column" id="kontakte">
-    <h2 class="mb-5">Kontakte</h2>
-  </section>
-
   <div class="container-fluid p-0">
     <div id="allinput">
+
+
+      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="kontakte">
+        <div id="myauto">
+          <h2 class="mb-5">Kontakte</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-4">
+            <div class="card-group">
+              <span v-for="(sh, index) in stakeholder">
+
+                <div class="card" style="width: 14rem; margin: 5px;">
+                  <img class="card-img-top" src="img/oras.jpg" alt="bildchen">
+                  <div class="card-block" style="padding: 5px">
+                    <h3 class="card-title">{{stakeholder[index].contact.contactPerson}}</h3>
+                    <a class="nav-link js-scroll-trigger btn btn-primary" href="#about" v-on:click="setid(index)">visit</a>
+                  </div>
+                </div>
+            </div>
+          </div>
+          </span>
+        </div>
+      </section>
+
+
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">{{stakeholder[0].contact.contactPerson|firstname}}
-            <span class="text-primary">{{stakeholder[0].contact.contactPerson|lastname}}</span>
+          <h1 class="mb-0">{{stakeholder[index].contact.contactPerson|firstname}}
+            <span class="text-primary">{{stakeholder[index].contact.contactPerson|lastname}}</span>
           </h1>
-          <div class="subheading mb-5">{{stakeholder[0].contact.postAddress}} · 01187 Dresden · {{stakeholder[0].contact.phone}}·
-            <a href="mailto:s73980@htw.dresden.de">{{stakeholder[0].contact.email}}</a>
+          <div class="subheading mb-5">{{stakeholder[index].contact.postAddress}} · 01187 Dresden · {{stakeholder[index].contact.phone}}·
+            <a href="mailto:s73980@htw.dresden.de">{{stakeholder[index].contact.email}}</a>
           </div>
-          <p class="mb-5">"Computer werden kleiner und kleiner, bald verschwinden sie völlig."<br> -Ephraim Kishons</p>
+          <p class="mb-5">"Computer werden kleiner und kleiner, bald verschwinden sie völlig."
+            <br> -Ephraim Kishons</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/jimmy.orawetz">
@@ -116,7 +136,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Name</h3>
-              <div class="subheading mb-3">{{stakeholder[0].contact.contactPerson}}</div>
+              <div class="subheading mb-3">{{stakeholder[index].contact.contactPerson}}</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">ggf Datum der Aktualisierung</span>
@@ -126,7 +146,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Adresse</h3>
-              <div class="subheading mb-3">{{stakeholder[0].contact.postAddress}}</div>
+              <div class="subheading mb-3">{{stakeholder[index].contact.postAddress}}</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">ggf Datum der Aktualisierung</span>
@@ -136,7 +156,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Telefonnummer</h3>
-              <div class="subheading mb-3">{{stakeholder[0].contact.phone}}</div>
+              <div class="subheading mb-3">{{stakeholder[index].contact.phone}}</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">ggf Datum der Aktualisierung</span>
@@ -146,7 +166,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Fax</h3>
-              <div class="subheading mb-3">{{stakeholder[0].contact.telefax}}</div>
+              <div class="subheading mb-3">{{stakeholder[index].contact.telefax}}</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">ggf Datum der Aktualisierung</span>
@@ -156,7 +176,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Email</h3>
-              <div class="subheading mb-3">{{stakeholder[0].contact.email}}</div>
+              <div class="subheading mb-3">{{stakeholder[index].contact.email}}</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">ggf Datum der Aktualisierung</span>
@@ -166,7 +186,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Plattform</h3>
-              <div class="subheading mb-3">{{stakeholder[0].contact.website}}</div>
+              <div class="subheading mb-3">{{stakeholder[index].contact.website}}</div>
               <p>Plattformbeschreibung oder nähere Infos</p>
             </div>
             <div class="resume-date text-md-right">
@@ -179,19 +199,19 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Hinzufügen...</h2>
-          <span div v-for="(item,property) in stakeholder[0].contact">
+          <h2 class="mb-5">Bearbeiten...</h2>
+          <span div v-for="(item,property) in stakeholder[index].contact">
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">{{property}}</h3>
-              <div class="form-group row">
-                <div class="col-15">
-                  <input class="form-control" type="text" :placeholder="property" v-model="stakeholder[0].contact[property]">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">{{property}}</h3>
+                <div class="form-group row">
+                  <div class="col-15">
+                    <input class="form-control" type="text" :placeholder="property" v-model="stakeholder[index].contact[property]">
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-           </span>
+          </span>
         </div>
       </section>
       </div>
