Added Save-option for Contacts

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
               </div>
             </div>
           </span>
+          <button v-on:click="saveFile">Save to JSon</button>
         </div>
       </section>
       </div>
