Added lokal picture changing & json download/update

--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@
               </div>
             </div>
           </span>
+          <h2>Select an image</h2>
+          <input type="file" @change="onFileChange">
           <button v-on:click="saveFile">Save to JSon</button>
         </div>
       </section>
