--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 </head>
 
 <body id="page-top">
-
+  <div id="allinput">
   <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Nav</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/oras.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" :src="stakeholder[index].id" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -58,7 +58,6 @@
   </nav>
 
   <div class="container-fluid p-0">
-    <div id="allinput">
 
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="kontakte">
