--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 </head>
 
 <body id="page-top">
-  <div id="allinput">
+  
   <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Nav</span>
-      <span class="d-none d-lg-block">
+      <!--<span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" :src="stakeholder[index].id" alt="">
-      </span>
+      </span>-->
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -57,8 +57,8 @@
     </div>
   </nav>
 
-  <div class="container-fluid p-0">
-
+    <div class="container-fluid p-0">
+      <div id="allinput">
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="kontakte">
         <div id="myauto">
@@ -74,9 +74,10 @@
                     <a class="nav-link js-scroll-trigger btn btn-primary" href="#about" v-on:click="setid(index)">visit</a>
                   </div>
                 </div>
+              </span>
             </div>
           </div>
-          </span>
+
         </div>
       </section>
 
@@ -205,30 +206,33 @@
                 <h3 class="mb-0">{{property}}</h3>
                 <div class="form-group row">
                   <div class="col-15">
-                    <input class="form-control" type="text" :placeholder="property" v-model="stakeholder[index].contact[property]">
+                    <input class="form-control" type="text" placeholder="TODO" v-model="stakeholder[index].contact[property]">
                   </div>
                 </div>
               </div>
             </div>
           </span>
+          <p v-if="eval.right==true" style="color: green">{{eval.message}}</p>
+          <p v-else="eval.right==false" style="color: red">{{eval.message}}</p>
           <h2>Select an image</h2>
           <input type="file" @change="onFileChange">
           <button v-on:click="saveFile">Save to JSon</button>
         </div>
       </section>
       </div>
+    </div>
 
-      <!-- Bootstrap core JavaScript -->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-      <!-- Plugin JavaScript -->
-      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-      <!-- Custom scripts for this template -->
-      <script src="js/resume.min.js"></script>
-      <script src="js/vue.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.11.10/vue.min.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="js/resume.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.11.10/vue.min.js"></script>
 
 </body>
 
