--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
     <script src="js/vue.js"></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js'></script>
+    <script  src="js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.11.10/vue.min.js"></script>
 
 </body>
