--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/buttons.css" rel="stylesheet">
 
 </head>
 
@@ -51,7 +52,7 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Bearbeiten...</a>
+          <a class="nav-link js-scroll-trigger" href="#edit">Bearbeiten...</a>
         </li>
       </ul>
     </div>
@@ -59,23 +60,32 @@
 
     <div class="container-fluid p-0">
       <div id="allinput">
-
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="kontakte">
         <div id="myauto">
           <h2 class="mb-5">Kontakte</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-4">
             <div class="card-group">
               <span v-for="(sh, index) in stakeholder">
-
                 <div class="card" style="width: 14rem; margin: 5px;">
                   <img class="card-img-top" :src="stakeholder[index].id" alt="bildchen" height="300">
                   <div class="card-block" style="padding: 5px">
                     <h3 class="card-title">{{stakeholder[index].contact.contactPerson}}</h3>
-                    <a class="nav-link js-scroll-trigger btn btn-primary" href="#about" v-on:click="setid(index)">visit</a>
+                    <a style="display: block;" class= "btn btn-primary" href="#about" v-on:click="setid(index)">visit</a>
+                    <a style="display: block;" class="btn btn-danger btn-remove" v-on:click="remove(index)"><i class="fa fa-times"></i></a>
                   </div>
                 </div>
                 <div class="resume-item d-flex flex-column flex-md-row mb-4"></div>
               </span>
+              <span>
+                  <div class="card" style="width: 14rem; margin: 5px;">
+                      <img class="card-img-top" src="img/unknown.jpg" alt="bildchen" height="300">
+                    <div class="card-block" style="padding: 5px">
+                      <h3 class="card-title">Neuer Kontakt</h3>
+                      <a style="display: block;" class="btn btn-success btn-add" v-on:click="add"><i class="fa fa-plus"></i></a>                 
+                    </div>
+                  </div>
+                  <div class="resume-item d-flex flex-column flex-md-row mb-4"></div>
+                </span>
             </div>
           </div>
 
@@ -198,7 +208,7 @@
 
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="edit">
         <div class="my-auto">
           <h2 class="mb-5">Bearbeiten...</h2>
           <span div v-for="(item,property) in stakeholder[index].contact">
@@ -233,7 +243,7 @@
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
     <script src="js/vue.js"></script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js'></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script  src="js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.11.10/vue.min.js"></script>
 
