--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-4">
             <div class="card-group">
               <span v-for="(sh, index) in stakeholder">
-                <div class="card" style="width: 14rem; margin: 5px;">
+                <div class="card" style="width: 14rem; margin: 5px;" v-on:mouseover="animateButton($event, 1.1, 800, 400)" v-on:mouseout="animateButton($event, 1.0, 600, 300)">
                   <img class="card-img-top" :src="stakeholder[index].id" alt="bildchen" height="300">
                   <div class="card-block" style="padding: 5px">
                     <h3 class="card-title">{{stakeholder[index].contact.contactPerson}}</h3>
@@ -77,7 +77,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row mb-4"></div>
               </span>
               <span>
-                  <div class="card" style="width: 14rem; margin: 5px;">
+                  <div class="card" style="width: 14rem; margin: 5px;" v-on:mouseover="animateButton($event, 1.1, 800, 400)" v-on:mouseout="animateButton($event, 1.0, 600, 300)">
                       <img class="card-img-top" src="img/unknown.jpg" alt="bildchen" height="300">
                     <div class="card-block" style="padding: 5px">
                       <h3 class="card-title">Neuer Kontakt</h3>
