--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 </head>
 
 <body id="page-top">
-  
+    <div id="allinput">
   <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Nav</span>
-      <!--<span class="d-none d-lg-block">
+      <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" :src="stakeholder[index].id" alt="">
-      </span>-->
+      </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">Allgemein</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Profile</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Profil</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#edit">Bearbeiten...</a>
@@ -59,7 +59,6 @@
   </nav>
 
     <div class="container-fluid p-0">
-      <div id="allinput">
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="kontakte">
         <div id="myauto">
           <h2 class="mb-5">Kontakte</h2>
@@ -142,15 +141,13 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Profile</h2>
-
+          <div class="row">
+            <div class="col">
+          <h2 class="mb-5">Profil</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Name</h3>
               <div class="subheading mb-3">{{stakeholder[index].contact.contactPerson}}</div>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">ggf Datum der Aktualisierung</span>
             </div>
           </div>
 
@@ -159,18 +156,12 @@
               <h3 class="mb-0">Adresse</h3>
               <div class="subheading mb-3">{{stakeholder[index].contact.postAddress}}</div>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">ggf Datum der Aktualisierung</span>
-            </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Telefonnummer</h3>
               <div class="subheading mb-3">{{stakeholder[index].contact.phone}}</div>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">ggf Datum der Aktualisierung</span>
             </div>
           </div>
 
@@ -179,18 +170,12 @@
               <h3 class="mb-0">Fax</h3>
               <div class="subheading mb-3">{{stakeholder[index].contact.telefax}}</div>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">ggf Datum der Aktualisierung</span>
-            </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Email</h3>
               <div class="subheading mb-3">{{stakeholder[index].contact.email}}</div>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">ggf Datum der Aktualisierung</span>
             </div>
           </div>
 
@@ -200,34 +185,49 @@
               <div class="subheading mb-3">{{stakeholder[index].contact.website}}</div>
               <p>Plattformbeschreibung oder nähere Infos</p>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">ggf Datum der Aktualisierung</span>
-            </div>
           </div>
 
+            </div>
+            <div class="col">
+                <img :src="stakeholder[index].id" alt="Profilbild" class="img-thumbnail">
+              </div>
+          </div>
+
+        </div>
 
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="edit">
         <div class="my-auto">
           <h2 class="mb-5">Bearbeiten...</h2>
-          <span div v-for="(item,property) in stakeholder[index].contact">
-            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="row">
+            <div class="col">
+          <span v-for="(item,property) in stakeholder[index].contact">
+            <div class="resume-item d-flex flex-column flex-md-row mb-4">
               <div class="resume-content mr-auto">
                 <h3 class="mb-0">{{property}}</h3>
-                <div class="form-group row">
-                  <div class="col-15">
                     <input class="form-control" type="text" placeholder="TODO" v-model="stakeholder[index].contact[property]">
-                  </div>
                 </div>
               </div>
-            </div>
           </span>
           <p v-if="eval.right==true" style="color: green">{{eval.message}}</p>
           <p v-else="eval.right==false" style="color: red">{{eval.message}}</p>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img class="card-img-top" :src="stakeholder[index].id" alt="Profilbild">
+                <div class="card-block">
+                  <p class="card-text">Current picture</p>
+                </div>
+              </div>
+        </div>
+        <div class="col">
           <h2>Select an image</h2>
           <input type="file" @change="onFileChange">
-          <button v-on:click="saveFile">Save to JSon</button>
+        </div>
+        </div>
+        <button v-on:click="saveFile">Save to JSon</button>
+          
         </div>
       </section>
       </div>
