--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="js/resume.js"></script>
     <script src="js/vue.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script  src="js/index.js"></script>
