--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
             </li>
           </ul>
         </div>
-              <img class=" img-fluid rounded float-right" :src="stakeholder[index].id" alt="Profilbild">
+        <div class="col">
+              <img class=" img-fluid rounded float-right" :src="stakeholder[index].id" alt="Profilbild"></div>
     </div>
       </section>
 
@@ -247,7 +248,6 @@
     <script src="js/resume.js"></script>
     <script src="js/vue.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script  src="js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/0.11.10/vue.min.js"></script>
 
 </body>
